----------------------------------------------------------------------------------------
Scheduled Release 8.2508.0 (aka 2025.08) 2025-08-26

IMPORTANT NOTE TO Package Builders / Distros:

The documentation has been integrated back into the main repository, in the
doc/ subdirectory. As such, there is no second doc tarball available and
package build most probably needs adjustments.

This release had the overall theme of improving code quality, including the
initial introduction of doxygen comments, improving the user experience by
documentation updates, and implementing the rsyslog responsible "AI First"
strategy. Note that while AI generated code is part of the release, all
contributions, AI or human, follow the same rigourus review and CI procedures
with the final acceptance is by a maintainer.

AI slop is not accepted and this release addresses AI slop by better parametrizing
agents in regard to code generation and streamlining code so that AIs better
understand it. This is an ongoing effort.

- 2025-08-25: tcpsrv: refactor IO loop; rearm-before-unlock; poll path
  Improve maintainability and robustness of the TCP server by clarifying
  locking/ownership, tightening invariants, and simplifying queueing.
  Also fix a long-standing pragma macro typo across the tree.
  Impact: Internal behavior only. EPOLL re-arm now occurs while holding
  pSess->mut; starvation cap counts only successful reads.
  Before/After:
  Before: EPOLL re-arm happened after leaving the critical section; read
  starvation cap counted loop iterations; closeSess() sometimes unlocked;
  select_* helpers used on non-epoll path; enqueueWork() returned status.
  After: EPOLLONESHOT is re-armed before unlocking; starvation cap counts
  only RS_RET_OK reads; closeSess() never unlocks; poll_* helpers replace
  select_*; enqueueWork() is void (best-effort).
  Technical details:
  - Replace notifyReArm() with rearmIoEvent() (EPOLL_CTL_MOD with