@@ -1,4 +1,6 @@
 ----------------------------------------------------------------------------------------
+Scheduled Release 8.2510.0 (aka 2025.10) 2025-10-??
+----------------------------------------------------------------------------------------
 Scheduled Release 8.2508.0 (aka 2025.08) 2025-08-26
 
 IMPORTANT NOTE TO Package Builders / Distros:
